<resources>
    <string name="app_name">ZSCY</string>
    <string name="number_of_weeks">周数</string>
    <string name="edit_memo">编辑备忘</string>
    <string name="title">标题</string>
    <string name="please_enter_a_title">请输入标题</string>
    <string name="content">内容</string>
    <string name="please_edit_the_content">请编辑内容......</string>
    <string name="select_weeks">选择周数</string>
    <string name="time">时间</string>
    <string name="select_time">选择时间</string>
    <string name="remind">提醒</string>
    <string name="no_reminder">不提醒</string>
    <string name="to_login_activity">to login activity</string>
    <string name="to_edit_remind_activity">to edit remind activity</string>
    <string name="login">登录</string>
    <string name="enter_student_number">请输入学号</string>
    <string name="password">请输入身份证后六位</string>
    <string name="sure">确定</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="_1_2">1~2</string>
    <string name="_3_4">3~4</string>
    <string name="_5_6">5~6</string>
    <string name="_7_8">7~8</string>
    <string name="_9_10">9~10</string>
    <string name="_11_12">11~12</string>
</resources>
