<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorWhite_1"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/close"
            tools:ignore="ContentDescription,NewApi"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:text="@string/sure"
            android:textColor="@color/colorBlue_sure"
            android:textSize="@dimen/textSize_18sp" />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorBlue_2"
        android:orientation="horizontal"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tuesday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wednesday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/thursday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/saturday"
            android:textSize="@dimen/textSize_18sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sunday"
            android:textSize="@dimen/textSize_18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="300dp"
            android:background="@color/colorBlue_2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_2"
                android:textSize="@dimen/fontSize_13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3_4"
                android:textSize="@dimen/fontSize_13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5_6"
                android:textSize="@dimen/fontSize_13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7_8"
                android:textSize="@dimen/fontSize_13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9_10"
                android:textSize="@dimen/fontSize_13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_11_12"
                android:textSize="@dimen/fontSize_13sp" />

        </LinearLayout>

        <GridView
            android:id="@+id/gv_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite_1"
            android:numColumns="7" />

    </LinearLayout>

</LinearLayout>