<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!--标题栏 -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_edit_memo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        tools:ignore="RtlSymmetry">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/edit_memo"
            android:textColor="@color/colorWhite_1"
            android:textSize="23sp" />

        <ImageButton
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_gravity="end"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="fitCenter"
            android:src="@drawable/right"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite_2"
        android:orientation="vertical">

        <!--标题 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/colorWhite_1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/title"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18sp" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/please_enter_a_title"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/textSize_18sp"
                tools:ignore="Autofill,TextFields" />

        </LinearLayout>
        <!--内容 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorWhite_1"
            android:orientation="horizontal"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/content"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/content"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18sp" />

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="start"
                android:hint="@string/please_edit_the_content"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:textColor="@color/colorFontGray"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/textSize_18sp"
                tools:ignore="Autofill" />

        </LinearLayout>
        <!--周数 -->
        <LinearLayout
            android:id="@+id/ll_week"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="13dp"
            android:background="@color/colorWhite_1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/week"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/number_of_weeks"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18sp" />

            <TextView
                android:id="@+id/tv_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/select_weeks"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textSize="@dimen/textSize_18sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:scaleType="fitCenter"
                android:src="@drawable/turn_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>
        <!--时间 -->
        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite_1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/time"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18sp" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/select_time"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textSize="@dimen/textSize_18sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/turn_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>
        <!--提醒 -->
        <LinearLayout
            android:id="@+id/ll_remind"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:background="@color/colorWhite_1"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/remind"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/remind"
                android:textColor="@android:color/black"
                android:textSize="@dimen/textSize_18sp" />

            <TextView
                android:id="@+id/tv_remind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/no_reminder"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorFontGray"
                android:textSize="@dimen/textSize_18sp" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/turn_right"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
