<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite_2">

    <View
        android:id="@+id/top_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/ibtn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/back"
            tools:ignore="ContentDescription"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/colorWhite_1"
            android:textSize="23sp" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="ContentDescription" />

    <android.support.v7.widget.CardView
        android:id="@+id/input_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        app:cardCornerRadius="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorWhite_1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="9dp"
                android:background="@null"
                android:drawableStart="@drawable/account"
                android:drawableLeft="@drawable/account"
                android:drawablePadding="16dp"
                android:hint="@string/enter_student_number"
                android:inputType="number"
                android:maxLength="10"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="32dp"
                android:background="@color/colorWhite_2" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="9dp"
                android:layout_marginEnd="9dp"
                android:background="@null"
                android:drawableStart="@drawable/password"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="16dp"
                android:hint="@string/password"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:maxLength="6"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="16sp"
                tools:ignore="Autofill" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="9dp"
                android:layout_marginBottom="50dp"
                android:background="@color/colorWhite_2" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn"
                android:text="@string/login"
                android:textColor="@color/colorWhite_1"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.346" />
</android.support.constraint.ConstraintLayout>